--- a/react-print-pdf/package.json
+++ b/react-print-pdf/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-to-print": "^2.12.3",
+    "recompose": "^0.30.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
