--- a/react-img-s3/react-uploadimg-aws-s3/package.json
+++ b/react-img-s3/react-uploadimg-aws-s3/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
+    "aws-sdk": "^2.848.0",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.17",
+    "multer-s3": "^2.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
